# OpenLoci

./: CHANGELOG.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
.tmp/: composite-body.md  composite-issue.txt
src/openloci/: __init__.py  cli.py  generator.py  skins.py
tests/: conftest.py  test_cli_info.py  test_skins.py
