[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openloci"
version = "0.1.0"
description = "A filesystem-native collaborative Memory Palace for distributed cognition"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

authors = [
    { name = "Jonah Bossewitch, PhD", email = "jonah@bossewitch.net" }
]
keywords = ["memory-palace", "cookiecutter", "knowledge-management", "distributed-cognition", "LLM"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "cookiecutter>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
openloci = "openloci.cli:app"

[project.urls]
Homepage = "https://openloci.org"
Repository = "https://github.com/openloci/OpenLoci"
"Bug Tracker" = "https://github.com/openloci/OpenLoci/issues"
Changelog = "https://github.com/openloci/OpenLoci/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/openloci"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.13"
strict = true
